# Sharade

./: .gitignore  ChangeLog.md  LICENSE  README.md  Sharade.cabal
code_examples/: AFN.sa  Combinations.sa  HighOrder.sa  HighOrderTest.sa  LazyEvaluation.sa  NonDeterminism.sa  NondeterminismTest.sa  PatternMatching.sa  PermutationSort.sa  Share.sa  ShareTest.sa  Word.sa  cosa  tests.sa
doc/Memoria/: Memoria.bib  Memoria.tex
doc/Memoria/tex/: Memoria10_conclusiones.tex  Memoria10_conclusiones_en.tex  Memoria1_portada.tex  Memoria2_resumen.tex  Memoria2_resumen_en.tex  Memoria3_introduccion.tex  Memoria3_introduccion_en.tex  Memoria4_sharade.tex  Memoria5_conocimientos.tex  Memoria6_explicit.tex  Memoria7_parsec.tex  Memoria8_impl_sharade.tex  Memoria9_futuros.tex  Memoria9_futuros_en.tex
src/Sharade/: List.hs  Main.hs  Pair.hs  Prelude.hs
src/Sharade/Parser/: Declaration.hs  Expression.hs  Lexer.hs  Parser.hs  Syntax.hs
src/Sharade/Semantic/: Semantic.hs  Transform.hs
src/Sharade/Semantic/Internal/: Utils.hs
src/Sharade/Translator/: Eval.hs  Translator.hs
src/Sharade/Translator/Semantic/: Infer.hs  Substitutable.hs  Type.hs  TypeEnv.hs  TypesEvaluation.hs
src/Sharade/Translator/Semantic/Internal/: Utils.hs
