name:                Sharade

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.0

synopsis:            Transpiler of a language (Sharade) with no-determinism
                     features.

description:         This is a very simple transpiler to Haskell of a language
                     with no determinism features. It combines share and no-share
                     semantics.

license:             MIT
license-file:        LICENSE
author:              Manuel Velasco
maintainer:          manuel.velascosuarez@outlook.com       

category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  exposed-modules:   Sharade.Prelude
                     Sharade.List
                     Sharade.Pair
  build-Depends:     base >=4.9 && <5.0, explicit-sharing==0.10
  hs-source-dirs:    src
  default-language:  Haskell2010


executable Sharade
  -- .hs or .lhs file containing the Main module.
  main-is:           Sharade/Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:     Sharade.Parser.Lexer,
                     Sharade.Parser.Syntax,
                     Sharade.Parser.Expression,
                     Sharade.Parser.Declaration,
                     Sharade.Parser.Parser,
                     Sharade.Translator.Semantic.Substitutable,
                     Sharade.Translator.Semantic.Type,
                     Sharade.Translator.Semantic.TypeEnv,
                     Sharade.Translator.Semantic.Infer,
                     Sharade.Translator.Translator
  
  build-depends:     base >=4.9 && <5.0, parsec, indents, parsec3-numbers,
                     containers, mtl
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Directories containing source files.
  hs-source-dirs:    src
  
  -- Base language which the package is written in.
  default-language:  Haskell2010
  
Source-Repository head
  type:     git
  location: git@github.com:ManuelVs/Sharade.git
